MF header ready. First photo block half-ready.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Grid WebSite</title>
 </head>
 <body>
@@ -13,11 +15,10 @@
         <header class="header">
             <div class="logo-name">
                 <div class="logo">
-                    <img class="logo-picture" src="img/logo.png" alt="">
                 </div>
                 <div class="name">
                     <p class="name-top">milan</p>
-                    <p class="name-bottom">holiday</p>
+                    <p class="name-bottom">holidays</p>
                 </div>
             </div>
             <div class="contacts">
@@ -26,39 +27,41 @@
             </div>
         </header>
         <main class="main">
-            <div class="tourism-item">
-                <div class="tourism-item__photo pic-fst">
-                    <div class="price-slide">
-                        <div class="price-box">
-                            <p class="from-word">from</p>
-                            <p class="price">€ 50</p>
-                        </div>
-                        <div class="details-button">
-                            <span class="details-link">view details</span>
-                            <a href="#" class="details-arrow">
-                                <img class="arrow" src="img/arrow.png" alt="arrow">
-                            </a>
+            <div class="tourism">
+                <div class="tourism-item">
+                    <div class="tourism-item__photo pic-fst">
+                        <div class="price-slide">
+                            <div class="price-box">
+                                <p class="from-word">from</p>
+                                <p class="price">€ 50</p>
+                            </div>
+                            <div class="details-button">
+                                <span class="details-link">view details</span>
+                                <a href="#" class="details-arrow">
+                                    <img class="arrow" src="img/arrow.png" alt="arrow">
+                                </a>
+                            </div>
                         </div>
                     </div>
+                    <div class="tourism-item__name">
+                        shopping tours
+                    </div>
                 </div>
-                <div class="tourism-item__name">
-                    shopping tours
+                <div class="tourism-item">
+
                 </div>
-            </div>
-            <div class="tourism-item">
+                <div class="tourism-item">
 
-            </div>
-            <div class="tourism-item">
+                </div>
+                <div class="tourism-item">
 
-            </div>
-            <div class="tourism-item">
+                </div>
+                <div class="tourism-item">
 
-            </div>
-            <div class="tourism-item">
+                </div>
+                <div class="tourism-item">
 
-            </div>
-            <div class="tourism-item">
-
+                </div>
             </div>
         </main>
         <footer class="footer">
