--- a/index.html
+++ b/index.html
@@ -48,24 +48,104 @@
                     </div>
                 </div>
                 <div class="tourism-item">
-
+                    <div class="tourism-item__photo pic-snd">
+                        <div class="price-slide">
+                            <div class="price-box">
+                                <p class="from-word">from</p>
+                                <p class="price">€ 55</p>
+                            </div>
+                            <div class="details-button">
+                                <span class="details-link">view details</span>
+                                <a href="#" class="details-arrow">
+                                    <img class="arrow" src="img/arrow.png" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tourism-item__name">
+                        sightseeing tours
+                    </div>
                 </div>
                 <div class="tourism-item">
-
+                    <div class="tourism-item__photo pic-trd">
+                        <div class="price-slide">
+                            <div class="price-box">
+                                <p class="from-word">from</p>
+                                <p class="price">€ 40</p>
+                            </div>
+                            <div class="details-button">
+                                <span class="details-link">view details</span>
+                                <a href="#" class="details-arrow">
+                                    <img class="arrow" src="img/arrow.png" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tourism-item__name">
+                        food tours
+                    </div>
                 </div>
                 <div class="tourism-item">
-
+                    <div class="tourism-item__photo pic-frth">
+                        <div class="price-slide">
+                            <div class="price-box">
+                                <p class="from-word">from</p>
+                                <p class="price">€ 35</p>
+                            </div>
+                            <div class="details-button">
+                                <span class="details-link">view details</span>
+                                <a href="#" class="details-arrow">
+                                    <img class="arrow" src="img/arrow.png" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tourism-item__name">
+                        bars & nightlife
+                    </div>
                 </div>
                 <div class="tourism-item">
-
+                    <div class="tourism-item__photo pic-ffth">
+                        <div class="price-slide">
+                            <div class="price-box">
+                                <p class="from-word">from</p>
+                                <p class="price">€ 40</p>
+                            </div>
+                            <div class="details-button">
+                                <span class="details-link">view details</span>
+                                <a href="#" class="details-arrow">
+                                    <img class="arrow" src="img/arrow.png" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tourism-item__name">
+                        art & architecture
+                    </div>
                 </div>
                 <div class="tourism-item">
-
+                    <div class="tourism-item__photo pic-sxth">
+                        <div class="price-slide">
+                            <div class="price-box">
+                                <p class="from-word">from</p>
+                                <p class="price">€ 60</p>
+                            </div>
+                            <div class="details-button">
+                                <span class="details-link">view details</span>
+                                <a href="#" class="details-arrow">
+                                    <img class="arrow" src="img/arrow.png" alt="arrow">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tourism-item__name">
+                        walking tours
+                    </div>
                 </div>
             </div>
         </main>
         <footer class="footer">
-
+            &copy 2018 Copyright Milan Holidays, Inc. All rights reserved.
         </footer>
     </div>
 
